redesign stages & user profile

--- a/stage3.html
+++ b/stage3.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <!-- ربط ملف الـ CSS -->
-    <link rel="stylesheet" href="assets/css/stages.css">
+    <link rel="stylesheet" href="assets/css/stage3.css">
 </head>
 
 <body>
