home_page&3_stages&articles&dashboard

--- a/stage1.html
+++ b/stage1.html
@@ -7,7 +7,7 @@
     <title>نبتة - مرحلة ما قبل الزواج</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/stage1.css">
+    <link rel="stylesheet" href="assets/css/stages.css">
 </head>
 <body>
     <nav class="main-nav">
